--- a/public/trademark-registration-in-Europe/index.html
+++ b/public/trademark-registration-in-Europe/index.html
@@ -22,7 +22,7 @@
     a:hover { text-decoration: underline }
     hr { border-bottom:1px solid #000 }
     h1, h2, h3, h4 { padding-top:0; margin:0; text-transform:uppercase; }
-    .price { font-size:1.5em; font-weight:bold; color:#88d; }
+    .price { font-size:1.25em; font-weight:bold; color:#88d; }
     .align-right { text-align:right; }
     .float-left { float:left; padding-right:1em; }
     .float-right { float:right; padding-left:1em; }
@@ -34,16 +34,17 @@
     #speech { min-width:12em; max-height:40vh; }
     #message { overflow:hidden; overflow-y:auto; min-height:6em; max-height:30vh; }
     .full { width:100%; }
+    .half { width:50%; }
     .third { width:33.33%; }
-    .full, .third, .column { box-sizing: border-box; float: left; }
+    .full, .half, .third, .column { box-sizing: border-box; float: left; }
     .large { font-size:1.25em; }
     .small, small { font-size:0.8em; }
     .icon { height: 2.5em; }
     .icon:hover { opacity: 0.5 }
     .round { border-radius:0.5em; }
-    .box, .speechbox { border-radius:1em; overflow:hidden; padding:1.5em; margin-bottom:1.5em; background-color:#fff; color:#000; box-shadow:0 4px 16px rgba(0,0,0,0.5); }
-    .speechbox { overflow:visible; background-color:#88d; color:#fff; }
     .panel { position:absolute; box-sizing:border-box; padding:0.5em; width:33%; }
+    .box, .speechbox { border-radius:1em; overflow:hidden; padding:0.75em; margin-bottom:1.5em; background-color:#fff; color:#000; box-shadow:0 4px 16px rgba(0,0,0,0.5); }
+    .speechbox { overflow:visible; background-color:#88d; color:#fff; }
     #cpanel { color:#000; font-size:1.5em; text-shadow: 0 0 .25em #ccc, 0 0 .5em #ccc, 0 0 .75em #ccc, 0 0 1em #ccc; }
     .shadow { filter: drop-shadow(5px 5px 5px #222); }
     ::-webkit-scrollbar { width:10px; }
