--- a/public/trademark-registration-in-Europe/text/de.html
+++ b/public/trademark-registration-in-Europe/text/de.html
@@ -18,10 +18,11 @@
 
 <div class="box large">
 <h2>Our Services</h2>
+<img src="flags/de.svg" class="full"/>
 <table>
-<tr><td>Trademark Study in Germany</td><td class="price align-right">$170.00</td></tr>
-<tr><td>Trademark Application, one class</td><td class="price align-right">$320.00</td></tr>
-<tr><td>Each additional class</td><td class="price align-right">$90.00</td></tr>
+<tr><td>Trademark Study in Germany</td><td class="price align-right">${DE[0]}</td></tr>
+<tr><td>Registration Request</td><td class="price align-right">${DE[2]}</td></tr>
+<tr><td>Certificate Request</td><td class="price align-right">${DE[4]}</td></tr>
 </table>
 <input type="button" value="Order Now" class="large full" onclick="window.open('https://trademarkers.com/registration/step2/DE')"/>
 <span class="small">
