--- a/public/trademark-registration-in-Europe/text/em.html
+++ b/public/trademark-registration-in-Europe/text/em.html
@@ -10,7 +10,7 @@ two unitary intellectual property rights valid across all EU Member States.
 <div id="left">
 
 <div class="box">
-<a href="?c=eur">
+<a href="?c=em">
 <img src="img/euipo.png" class="full"/>
 </a>
 <br>
@@ -18,7 +18,7 @@ two unitary intellectual property rights valid across all EU Member States.
 Many companies that want
 trademark protection in all member
 states of the European Union file their
-trademark applications at the EUIPO
+trademark applications at the <a href="?c=em">EUIPO</a>
 instead
 </p>
 <a href="https://www.youtube.com/watch?v=8Jn-eKqNuNA" target="_blank">
@@ -38,10 +38,11 @@ instead
 
 <div class="box large">
 <h2>Our Services</h2>
+<img src="flags/eu.svg" class="full"/>
 <table>
-<tr><td>Trademark Study in the European Union</td><td class="price align-right">$145.00</td></tr>
-<tr><td>Registration Request</td><td class="price align-right">$1,579.00</td></tr>
-<tr><td>Certificate Request</td><td class="price align-right">$218.00</td></tr>
+<tr><td>Trademark Study in the European Union</td><td class="price align-right">${EM[0]}</td></tr>
+<tr><td>Registration Request</td><td class="price align-right">${EM[2]}</td></tr>
+<tr><td>Certificate Request</td><td class="price align-right">${EM[4]}</td></tr>
 </table>
 <input type="button" value="Order Now" class="large full" onclick="window.open('https://trademarkers.com/registration/step2/EM/')">
 <p class="small">
@@ -57,7 +58,7 @@ After the formal examination at the European Union Intellectual Property Office 
 </p>
 <p>
 <img src="img/warning.png" class="icon float-left" />
-The opposition period in European Union Intellectual Property Office is <b>3 months</b> after publication. 
+The opposition period in the European Union Intellectual Property Office is <b>3 months</b> after publication. 
 </p>
 <p>
 <img src="img/warning.png" class="icon float-left"/>
