--- a/public/trademark-registration-in-Europe/text/price.html
+++ b/public/trademark-registration-in-Europe/text/price.html
@@ -1,5 +1,6 @@
 <html>
 <body>
+
 <div id="right">
 <div class="box large">
 <h2>Our Services</h2>
@@ -9,8 +10,9 @@
 <tr><td>Registration Request</td><td class="price align-right">${ISO[2]}</td></tr>
 <tr><td>Certificate Request</td><td class="price align-right">${ISO[4]}</td></tr>
 </table>
-<input type="button" value="Order Now" class="large full"/>
+<input type="button" value="Order Now" onclick="window.open('https://trademarkers.com/registration/step2/${ISO}')" class="large full"/>
 </div>
 </div>
+
 </body>
 </html>
